--- a/newland.html
+++ b/newland.html
@@ -212,6 +212,12 @@
     <!-- sec_5 -->
     <section class="sec sec_5">
         <div class="container">
+            <img alt="" class="abs_pic star_green" src="img/abs_pic/star_green.svg">
+            <img alt="" class="abs_pic star_orange" src="img/abs_pic/star_orange.svg">
+            <img alt="" class="abs_pic star_blue" src="img/abs_pic/star_blue.svg">
+            <img alt="" class="abs_pic circle_orange" src="img/abs_pic/circle_orange.svg">
+            <img alt="" class="abs_pic dubl_line" src="img/abs_pic/dubl_line.svg">
+            <img alt="" class="abs_pic stone_red" src="img/abs_pic/stone_red.svg">
             <div class="row">
                 <div class="col-12">
                     <div class="sec_title">
@@ -245,28 +251,101 @@
         </div>
     </section>
     <!-- / sec_5 -->
-    <section class="sec_6">
+    <!-- sec_6 -->
+    <section class="sec sec_6">
         <div class="container">
+            <img alt="" class="abs_pic circle" src="img/abs_pic/circle.svg">
+            <img alt="" class="abs_pic dubl_stone" src="img/abs_pic/dubl_stone.svg">
+            <img alt="" class="abs_pic dubl_stone_2" src="img/abs_pic/dubl_stone.svg">
             <h2 class="second_title text-center">Наши звезды</h2>
             <div class="row">
                 <div class="col-4">
                     <div class="media">
-                        <div class="icon"></div>
+                        <div class="icon" style="background-image: url('img/sec_6/port_1.jpg');"></div>
                         <h3>Константин Лашкевич</h3>
-                        <p>Продвижение <br> личного бренда</p>
+                        <p>Эксперт по управлению. Автор методологии “Позитивный менеджмент“</p>
                     </div>
+                </div>
+                <div class="col-4">
+                    <div class="media">
+                        <div class="icon" style="background-image: url('img/sec_6/port_2.jpg');"></div>
+                        <h3>Ицхак Пинтосевич</h3>
+                        <p>Эксперт №1 в СНГ по мотивации и раскрытию потенциала</p>
+                    </div>
+                </div>
+                <div class="col-4">
+                    <div class="media">
+                        <div class="icon" style="background-image: url('img/sec_6/port_3.jpg');"></div>
+                        <h3>Айше Борсеитова</h3>
+                        <p>Школа английского языка WOW-EFFECT. Автор уникальной методики обучения.</p>
+                    </div>
+                </div>
+                <div class="col-12 text-center">
+                    <a href="#" class="btn btn-success">Получить предложение</a>
                 </div>
             </div>
         </div>
     </section>
+    <!-- / sec_6 -->
+    <!-- sec_7 -->
     <section class="sec sec_7">
         <div class="container">
-            <div class="row"></div>
+            <img alt="" class="abs_pic circle" src="img/abs_pic/circle.svg">
+            <img alt="" class="abs_pic circle_orange" src="img/abs_pic/circle_orange.svg">
+            <img alt="" class="abs_pic dubl_line" src="img/abs_pic/dubl_line.svg">
+            <img alt="" class="abs_pic rocket" src="img/sec_7/rocket.svg">
+            <div class="row">
+                <div class="col-12">
+                    <div class="sec_title">
+                        <img src="img/sec_7/title_label.svg" alt="title_label">
+                        <h2>6 шагов к запуску своего продукта в сообществе <br> Smart Expert?</h2>
+                        <p>Всего 6 шагов отдаляют вас от эффективного запуска личного проекта в <br> сообществе Smart Expert</p>
+                    </div>
+                </div>
+            </div>
+            <div class="row row_with_before">
+                <div class="col-md-2">
+                    <div class="icon"><span>1</span></div>
+                    <p>Получить доступ в кабинет</p>
+                </div>
+                <div class="col-md-2">
+                    <div class="icon"><span>2</span></div>
+                    <p>Создать и упаковать личный бренд</p>
+                </div>
+                <div class="col-md-2">
+                    <div class="icon"><span>3</span></div>
+                    <p>Упаковать свой продукт</p>
+                </div>
+                <div class="col-md-2">
+                    <div class="icon"><span>4</span></div>
+                    <p>Автоматизировать привлечение клиентов</p>
+                </div>
+                <div class="col-md-2">
+                    <div class="icon"><span>5</span></div>
+                    <p>Организовать процесс продаж</p>
+                </div>
+                <div class="col-md-2">
+                    <div class="icon"><span>6</span></div>
+                    <p>Настроить вывод денег</p>
+                </div>
+            </div>
         </div>
     </section>
+    <!-- / sec_7 -->
     <section class="sec sec_8">
         <div class="container">
-            <div class="row"></div>
+            <div class="row">
+                <div class="col-12">
+                    <div class="sec_title">
+                        <img src="img/sec_8/title_label.svg" alt="title_label">
+                        <h2>Какие возможности вам открывает Smart Expert?</h2>
+                        <p>Мы подготовили весь необходимый инструментарий для вашего роста, <br> развития, продвижения личного бренда и создания успешного <br> образовательного проекта!</p>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+
+            </div>
         </div>
     </section>
     <section class="sec sec_9">
