--- a/newland.html
+++ b/newland.html
@@ -239,7 +239,7 @@
                     </div>
                     <div class="media">
                         <div class="icon icon_3"><img src="img/sec_5/icon_3.svg" alt="icon_3"></div>
-                        <p>Организуем продажи <br> и  обеспечим Вас <br> прибылью</p>
+                        <p>Организуем продажи <br> и обеспечим Вас <br> прибылью</p>
                     </div>
                 </div>
                 <div class="col-md-7">
@@ -260,21 +260,21 @@
             <h2 class="second_title text-center">Наши звезды</h2>
             <div class="row">
                 <div class="col-4">
-                    <div class="media">
+                    <div class="card_profile">
                         <div class="icon" style="background-image: url('img/sec_6/port_1.jpg');"></div>
                         <h3>Константин Лашкевич</h3>
                         <p>Эксперт по управлению. Автор методологии “Позитивный менеджмент“</p>
                     </div>
                 </div>
                 <div class="col-4">
-                    <div class="media">
+                    <div class="card_profile">
                         <div class="icon" style="background-image: url('img/sec_6/port_2.jpg');"></div>
                         <h3>Ицхак Пинтосевич</h3>
                         <p>Эксперт №1 в СНГ по мотивации и раскрытию потенциала</p>
                     </div>
                 </div>
                 <div class="col-4">
-                    <div class="media">
+                    <div class="card_profile">
                         <div class="icon" style="background-image: url('img/sec_6/port_3.jpg');"></div>
                         <h3>Айше Борсеитова</h3>
                         <p>Школа английского языка WOW-EFFECT. Автор уникальной методики обучения.</p>
@@ -332,6 +332,7 @@
         </div>
     </section>
     <!-- / sec_7 -->
+    <!-- sec_8 -->
     <section class="sec sec_8">
         <div class="container">
             <div class="row">
@@ -343,16 +344,149 @@
                     </div>
                 </div>
             </div>
-            <div class="row">
-
+            <div class="screen_list">
+                <div class="row align-items-center">
+                    <div class="col-md-6">
+                        <div class="slide_bg">
+                            <div class="imageSlider">
+                                <img src="img/sec_8/slide_1.jpg">
+                                <img src="img/sec_8/slide_1.jpg">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="text">
+                            <h3>Продвижение личного бренда</h3>
+                            <p>Все новые технологии и методики продвижения личного бренда внедрены на платформе Smart Expert. Создай свою собственную БИЗНЕС ВИЗИТКУ, в которой ты сможешь указать все свои достижения и результаты, интересы, навыки и
+                                специализацию. И это увидят более 2 млн человек! </p>
+                            <a href="#" class="btn btn-success">Узнать больше</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="row flex-row-reverse align-items-center">
+                    <div class="col-md-6">
+                        <div class="slide_bg">
+                            <img src="img/sec_8/slide_1.jpg">
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="text">
+                            <h3>Инструменты маркетинга</h3>
+                            <p>Smart Expert открывает уникальные инструменты эффективного привлечения клиентов на ваши образовательные продукты. <br> Пишите статьи и продвигайте свою эксперность на аудиторию в 2 млн человек, применяйте
+                                автоматизированные
+                                воронки продаж и выстраивайте эффективное взаимодействие с потенциальными клиентами</p>
+                            <a href="#" class="btn btn-success">Узнать больше</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="row align-items-center">
+                    <div class="col-md-6">
+                        <div class="slide_bg">
+                            <div class="imageSlider">
+                                <img src="img/sec_8/slide_1.jpg">
+                                <img src="img/sec_8/slide_1.jpg">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="text">
+                            <h3>Платформа для онлайн обучения</h3>
+                            <p>Вас ждет удобный конструктор курсов, который позволит настроить обучение максимально эффективно. Добавляйте обучающие материалы, создавайте онлайн мероприятия, проводите вебинары и мастермаинды. И все это настраивается
+                                в одном месте - легко и быстро! </p>
+                            <a href="#" class="btn btn-success">Узнать больше</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="row flex-row-reverse align-items-center">
+                    <div class="col-md-6">
+                        <div class="slide_bg">
+                            <img src="img/sec_8/slide_1.jpg">
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="text">
+                            <h3>Деловая социальная сеть</h3>
+                            <p>Создавайте личный профиль в закрытой социальной сети, где вас ждет: нетворкинг, решение ваших бизнес задач, удобный мессенджер для общения. Все это - возможности для вашего роста, продвижения личного бренда,
+                                формирования сильного окружения! </p>
+                            <a href="#" class="btn btn-success">Узнать больше</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="row align-items-center">
+                    <div class="col-md-6">
+                        <div class="slide_bg">
+                            <div class="imageSlider">
+                                <img src="img/sec_8/slide_1.jpg">
+                                <img src="img/sec_8/slide_1.jpg">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="text">
+                            <h3>Глобальный поиск экспертов</h3>
+                            <p>Нужно быстро найти Топ-менеджера в свой бизнес? Необходима консультация маркетолога или эксперта по продажам? В сообществе Smart Expert вас ждут лучшие эксперты, навыки которых подтверждаются специальным рейтингом! Это
+                                поможет вам выбрать лучших из лучших для решения своих задач! </p>
+                            <a href="#" class="btn btn-success">Узнать больше</a>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
+    <!-- / sec_8 -->
+    <!-- sec_9 -->
     <section class="sec sec_9">
         <div class="container">
-            <div class="row"></div>
+            <div class="row">
+                <div class="col-12">
+                    <div class="sec_title">
+                        <img src="img/sec_9/title_label.svg" alt="title_label">
+                        <h2>Smart Expert - каждый день помогает вам создать успешный <br> онлайн бизнес!</h2>
+                        <p>Вот, что говорят успешные онлайн предприниматели, известные <br> эксперты и авторы обучающих программ о нашем проекте</p>
+                    </div>
+                </div>
+            </div>
+            <div class="sleder_wrapp row">
+                <div class="sliderAuthors authors">
+                    <div class="col-md-4 py-5 px-4">
+                        <div class="card_profile">
+                            <div class="icon" style="background-image: url('img/sec_6/port_1.jpg');"></div>
+                            <h3>Константин Лашкевич</h3>
+                            <p>Автор курса “Семейные Финансы”</p>
+                            <i>“Я долго искал платформу для первого запуска своего курса “Семейные Финансы”. Smart Expert - отлично подошел для этого. Здесь я не только смог запустить свой курс, но также получил отличные инструменты для привлечения клиентов, как на обучающий продукт, так и на личные консультации. ”</i>
+                        </div>
+                    </div>
+                    <div class="col-md-4 py-5 px-4">
+                        <div class="card_profile">
+                            <div class="icon" style="background-image: url('img/sec_6/port_2.jpg');"></div>
+                            <h3>Ицхак Пинтосевич</h3>
+                            <p>Эксперт №1 в СНГ по мотивации <br> и раскрытию потенциала</p>
+                            <i>“Я давно искал возможность повысить доходимость учеников до конца курсов. Smart Expert - это то решение, которое мне отлично подходит. Геймификации, Инструменты маркетинга, продвижение личного бренда - это то, что нужно мне, моим экспертам и моей команде коучей IPACT. ”</i>
+                        </div>
+                    </div>
+
+                    <div class="col-md-4 py-5 px-4">
+                        <div class="card_profile">
+                            <div class="icon" style="background-image: url('img/sec_6/port_3.jpg');"></div>
+                            <h3>Айше Борсеитова</h3>
+                            <p>Школа английского языка <br> WOW-EFFECT</p>
+                            <i>“Мой марафон Английский за 30 дней на платформе Smart Expert - это нечто! У меня еще никогда небыло такой высокой вовлеченности учеников в процесс обучения. Smart Expert - это просто бомба для авторов курса!”</i>
+                        </div>
+                    </div>
+
+                    <div class="col-md-4 py-5 px-4">
+                        <div class="card_profile">
+                            <div class="icon" style="background-image: url('img/sec_6/port_3.jpg');"></div>
+                            <h3>Айше Борсеитова</h3>
+                            <p>Школа английского языка <br> WOW-EFFECT</p>
+                            <i>“Мой марафон Английский за 30 дней на платформе Smart Expert - это нечто! У меня еще никогда небыло такой высокой вовлеченности учеников в процесс обучения. Smart Expert - это просто бомба для авторов курса!”</i>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
+    <!-- / sec_9 -->
     <section class="sec sec_10">
         <div class="container">
             <div class="row"></div>
@@ -369,9 +503,33 @@
         $(document).ready(function() {
 
             //DOC: http://sachinchoolur.github.io/lightslider/settings.html
+
             $(".imageSlider").lightSlider({
                 item: 1,
-                slideMargin: 10,
+                slideMargin: 0,
+                addClass: '',
+                mode: "slide", //fade
+                useCSS: true,
+                cssEasing: 'ease', //'cubic-bezier(0.25, 0, 0.25, 1)',//
+                easing: 'linear', //'for jquery animation',////
+                speed: 400, //ms'
+                auto: true,
+                loop: true,
+                pager: false,
+                pause: 3500,
+                keyPress: true,
+                controls: true,
+                prevHtml: '<svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 28 28" fill="none"><path d="M14 28C21.7156 28 28 21.7156 28 14C28 6.28444 21.7156 -1.35795e-06 14 -6.8343e-07C6.28444 -8.9145e-09 -3.80578e-06 6.28445 -3.13127e-06 14C-2.45675e-06 21.7156 6.28444 28 14 28ZM15.8044 7.40444L17.7956 9.39555L13.1911 14L17.7956 18.6044L15.8044 20.5956L9.20889 14L15.8044 7.40444Z" fill="#DBDBDB"></svg>',
+                nextHtml: '<svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 28 28" fill="none"><path d="M14 28C21.7156 28 28 21.7156 28 14C28 6.28444 21.7156 -1.35795e-06 14 -6.8343e-07C6.28444 -8.9145e-09 -3.80578e-06 6.28445 -3.13127e-06 14C-2.45675e-06 21.7156 6.28444 28 14 28ZM15.8044 7.40444L17.7956 9.39555L13.1911 14L17.7956 18.6044L15.8044 20.5956L9.20889 14L15.8044 7.40444Z" fill="#DBDBDB"></svg>',
+                enableTouch: true,
+                enableDrag: true,
+                freeMove: true,
+                responsive: [],
+
+            });
+            $('.sliderAuthors').lightSlider({
+                item: 3,
+                slideMargin: 0,
                 addClass: '',
                 mode: "slide", //fade
                 useCSS: true,
