--- a/newland.html
+++ b/newland.html
@@ -453,7 +453,8 @@
                             <div class="icon" style="background-image: url('img/sec_6/port_1.jpg');"></div>
                             <h3>Константин Лашкевич</h3>
                             <p>Автор курса “Семейные Финансы”</p>
-                            <i>“Я долго искал платформу для первого запуска своего курса “Семейные Финансы”. Smart Expert - отлично подошел для этого. Здесь я не только смог запустить свой курс, но также получил отличные инструменты для привлечения клиентов, как на обучающий продукт, так и на личные консультации. ”</i>
+                            <i>“Я долго искал платформу для первого запуска своего курса “Семейные Финансы”. Smart Expert - отлично подошел для этого. Здесь я не только смог запустить свой курс, но также получил отличные инструменты для привлечения
+                                клиентов, как на обучающий продукт, так и на личные консультации. ”</i>
                         </div>
                     </div>
                     <div class="col-md-4 py-5 px-4">
@@ -461,7 +462,8 @@
                             <div class="icon" style="background-image: url('img/sec_6/port_2.jpg');"></div>
                             <h3>Ицхак Пинтосевич</h3>
                             <p>Эксперт №1 в СНГ по мотивации <br> и раскрытию потенциала</p>
-                            <i>“Я давно искал возможность повысить доходимость учеников до конца курсов. Smart Expert - это то решение, которое мне отлично подходит. Геймификации, Инструменты маркетинга, продвижение личного бренда - это то, что нужно мне, моим экспертам и моей команде коучей IPACT. ”</i>
+                            <i>“Я давно искал возможность повысить доходимость учеников до конца курсов. Smart Expert - это то решение, которое мне отлично подходит. Геймификации, Инструменты маркетинга, продвижение личного бренда - это то, что нужно
+                                мне, моим экспертам и моей команде коучей IPACT. ”</i>
                         </div>
                     </div>
 
@@ -487,13 +489,126 @@
         </div>
     </section>
     <!-- / sec_9 -->
+    <!-- sec_10 -->
     <section class="sec sec_10">
         <div class="container">
-            <div class="row"></div>
+            <div class="row">
+                <div class="col-12">
+                    <div class="sec_title">
+                        <img src="img/sec_9/title_label.svg" alt="title_label">
+                        <h2>Тарифные планы</h2>
+                        <p>Вас ждут эксклюзивные инструменты для саморазвития, продвижения и <br> монетизации экспертных знаний. Быстро! Легко! </p>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="card_tarif">
+                        <span class="upper_title">Пакет</span>
+                        <h2 class="title">Start</h2>
+                        <span class="icon"><img src="img/sec_10/tarif_start.svg" alt="tarif_start"></span>
+                        <h4 class="list_title">Создание и продвижение личного бренда</h4>
+                        <ul>
+                            <li>Собственная бизнес визитка</li>
+                            <li>Инструмент контент маркетинга</li>
+                            <li>Личный профиль в сообществе</li>
+                            <li>Доступ в деловую социальную сеть</li>
+                            <li>Нетворкинг для деловых связей</li>
+                            <li>Доступ к личным наставникам</li>
+                            <li>Участие в рейтинге авторов и экспертов</li>
+                        </ul>
+                        <div class="new_price_wrapp">
+                            <span class="new_price_title">Стоимость первым 5000 пользователей</span>
+                            <span class="new_price"><span>Free</span></span>
+                        </div>
+                        <div class="old_price_wrapp">
+                            <span class="old_price_title">регулярная стоимость</span>
+                            <span class="old_price"><span>$19</span> в месяц</span>
+                        </div>
+                        <a href="" class="btn btn-success">Начать использовать</a>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="card_tarif">
+                        <span class="upper_title">Пакет</span>
+                        <h2 class="title">Standart</h2>
+                        <span class="icon"><img src="img/sec_10/tarif_standart.svg" alt="tarif_standart"></span>
+                        <h4 class="list_title">Автоматизация воронки продаж</h4>
+                        <ul>
+                            <li><b>Возможности тарифа “Start”</b></li>
+                            <li>CRM для управления клиентами</li>
+                            <li>Воронки для привлечения аудитории</li>
+                            <li>Массовые рассылки</li>
+                            <li>Интеграция мессенджеров и сервисов рассылки</li>
+                            <li>Персонализированный наставник на вашей ссылке</li>
+                        </ul>
+                        <div class="new_price_wrapp">
+                            <span class="new_price_title">Стоимость до 01.10.2109</span>
+                            <span class="new_price"><span>$19</span> в месяц </span>
+                        </div>
+                        <div class="old_price_wrapp">
+                            <span class="old_price_title">регулярная стоимость</span>
+                            <span class="old_price"><span>$49</span> в месяц</span>
+                        </div>
+                        <a href="" class="btn btn-success">Начать использовать</a>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="card_tarif">
+                        <span class="upper_title">Пакет</span>
+                        <h2 class="title">Expert</h2>
+                        <span class="icon"><img src="img/sec_10/tarif_expert.svg" alt="tarif_expert"></span>
+                        <h4 class="list_title">Создание и продвижение курса</h4>
+                        <ul>
+                            <li><b>Возможности тарифа “Standart”</b></li>
+                            <li>Конструктор обучающих программ</li>
+                            <li>Размещение курса в магазине знаний</li>
+                            <li>Инструмент автоматизации обучения</li>
+                            <li>Инструмент проверки домашнего задания</li>
+                            <li>Интеграция сервисов поддержки клиентов и платежных систем</li>
+                        </ul>
+                        <div class="new_price_wrapp">
+                            <span class="new_price_title">Стоимость до 01.10.2109</span>
+                            <span class="new_price"><span>$49</span> в месяц</span>
+                        </div>
+                        <div class="old_price_wrapp">
+                            <span class="old_price_title">регулярная стоимость</span>
+                            <span class="old_price"><span>$149</span> в месяц</span>
+                        </div>
+                        <a href="" class="btn btn-success">Начать использовать</a>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
+    <!-- / sec_10 -->
+    <!-- sec_11 -->
+    <section class="sec sec_11">
+        <div class="container">
+            <div class="row">
 
+            </div>
+        </div>
+    </section>
+    <!-- / sec_11 -->
+    <!-- sec_12 -->
+    <section class="sec sec_12">
+        <div class="container">
+            <div class="row">
 
+            </div>
+        </div>
+    </section>
+    <!-- / sec_12 -->
+    <!-- footer -->
+    <footer class="sec">
+        <div class="container">
+            <div class="row">
+
+            </div>
+        </div>
+    </footer>
+    <!-- / footer -->
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
