--- a/newland.html
+++ b/newland.html
@@ -335,6 +335,10 @@
     <!-- sec_8 -->
     <section class="sec sec_8">
         <div class="container">
+            <img alt="" class="abs_pic circle" src="img/abs_pic/circle.svg">
+            <img alt="" class="abs_pic circle_orange" src="img/abs_pic/circle_orange.svg">
+            <img alt="" class="abs_pic dubl_line_vertical" src="img/abs_pic/dubl_line.svg">
+            <img alt="" class="abs_pic arrow" src="img/sec_7/arrow.svg">
             <div class="row">
                 <div class="col-12">
                     <div class="sec_title">
@@ -585,8 +589,13 @@
     <!-- sec_11 -->
     <section class="sec sec_11">
         <div class="container">
-            <div class="row">
-
+            <div class="row align-items-center">
+                <div class="col-md-4"><img src="img/sec_11/books.svg" alt="books"></div>
+                <div class="col-md-8">
+                    <h2>Попробуйте Smart Expert в течение <br> 14 дней абсолютно бесплатно</h2>
+                    <p>И Вы ощутите чувство удовлетворения <br> от сервиса, который искали.</p>
+                    <a href="" class="btn btn-success">Использовать Бесплатно</a>
+                </div>
             </div>
         </div>
     </section>
@@ -595,7 +604,48 @@
     <section class="sec sec_12">
         <div class="container">
             <div class="row">
+                <div class="col-md-3">
+                    <h4>Компания</h4>
+                    <ul>
+                        <li><a href="#">Цены</a></li>
+                        <li><a href="#">О нас</a></li>
+                        <li><a href="#">База знаний</a></li>
+                        <li><a href="#">Пробная версия</a></li>
+                    </ul>
+                </div>
+                <div class="col-md-3">
+                    <h4>Продукты</h4>
+                    <ul>
+                        <li><a href="#">Платформа для онлайн-обучения</a></li>
+                        <li><a href="#">Инструменты маркетинга</a></li>
+                        <li><a href="#">Продвижение личного бренда</a></li>
+                        <li><a href="#">Глобальный поиск экспертов</a></li>
+                        <li><a href="#">Деловая социальная сеть</a></li>
+                    </ul>
+                </div>
+                <div class="col-md-3">
+                    <h4>Контактная информация</h4>
 
+                    <table class="table table-borderless">
+                        <tr>
+                            <td>Телефон</td>
+                            <td><a href="tel:380968827050">+380 96 882 70 50</a></td>
+                        </tr>
+                        <tr>
+                            <td>Мейл</td>
+                            <td><a href="mailto:office@smartexpert.net">office@smartexpert.net</a></td>
+                        </tr>
+                    </table>
+                </div>
+                <div class="col-md-3">
+                    <div class="form-group">
+                        <select class="form-control" id="lang">
+                            <option selected>Russian</option>
+                            <option>Ukraine</option>
+                            <option>Engish</option>
+                        </select>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
@@ -603,9 +653,11 @@
     <!-- footer -->
     <footer class="sec">
         <div class="container">
-            <div class="row">
-
-            </div>
+            <nav>
+                <span>SmartExpert Copyright 2019</span>
+                <a href="">Договор публичной офферты</a>
+                <a href="">Политика конфедициальности</a>
+            </nav>
         </div>
     </footer>
     <!-- / footer -->
