--- a/newland.html
+++ b/newland.html
@@ -70,32 +70,32 @@
     <!-- sec_2 -->
     <section class="sec sec_2">
         <div class="container">
-            <div class="row flex-nowrap">
-                <div class="col">
+            <div class="row flex-md-nowrap">
+                <div class="col-md col-6">
                     <div class="media">
                         <div class="icon icon_1"></div>
                         <p>Платформа для онлайн-обучения</p>
                     </div>
                 </div>
-                <div class="col">
+                <div class="col-md col-6">
                     <div class="media">
                         <div class="icon icon_2"></div>
                         <p>Инструменты маркетинга</p>
                     </div>
                 </div>
-                <div class="col">
+                <div class="col-md col-6">
                     <div class="media">
                         <div class="icon icon_3"></div>
                         <p>Глобальный <br> поиск экспертов</p>
                     </div>
                 </div>
-                <div class="col">
+                <div class="col-md col-6">
                     <div class="media">
                         <div class="icon icon_4"></div>
                         <p>Деловая <br> социальная сеть</p>
                     </div>
                 </div>
-                <div class="col">
+                <div class="col-md col-6">
                     <div class="media">
                         <div class="icon icon_5"></div>
                         <p>Продвижение личного бренда</p>
@@ -145,61 +145,61 @@
                 </div>
             </div>
             <div class="row justify-content-center">
-                <div class="col-4">
+                <div class="col-md-4">
                     <div class="media">
                         <div class="icon"></div>
                         <p>Продвижение <br> личного бренда</p>
                     </div>
                 </div>
-                <div class="col-4">
+                <div class="col-md-4">
                     <div class="media">
                         <div class="icon"></div>
                         <p>Контент-маркетинг для <br> генерации трафика</p>
                     </div>
                 </div>
-                <div class="col-4">
+                <div class="col-md-4">
                     <div class="media">
                         <div class="icon"></div>
                         <p>Создание автоворонок <br> продаж</p>
                     </div>
                 </div>
-                <div class="col-4">
+                <div class="col-md-4">
                     <div class="media">
                         <div class="icon"></div>
                         <p>Управление <br> клиентами в CRM</p>
                     </div>
                 </div>
-                <div class="col-4">
+                <div class="col-md-4">
                     <div class="media">
                         <div class="icon"></div>
                         <p>Удобный <br> конструктор курсов</p>
                     </div>
                 </div>
-                <div class="col-4">
+                <div class="col-md-4">
                     <div class="media">
                         <div class="icon"></div>
                         <p>Создание сообщества с <br> помощью встроенной <br> социальной сети</p>
                     </div>
                 </div>
-                <div class="col-4">
+                <div class="col-md-4">
                     <div class="media">
                         <div class="icon"></div>
                         <p>Создание различных <br> моделей монетизации</p>
                     </div>
                 </div>
-                <div class="col-4">
+                <div class="col-md-4">
                     <div class="media">
                         <div class="icon"></div>
                         <p>Размещение курсов в <br> магазине знаний</p>
                     </div>
                 </div>
-                <div class="col-4">
+                <div class="col-md-4">
                     <div class="media">
                         <div class="icon"></div>
                         <p>Передача курса Smart Expert <br> для продюсирования</p>
                     </div>
                 </div>
-                <div class="col-4">
+                <div class="col-md-4">
                     <div class="media">
                         <div class="icon"></div>
                         <p>Возможность привлечь от <br> $5k до $50k инвестиций на <br> развитие своего проекта</p>
@@ -227,7 +227,7 @@
                     </div>
                 </div>
             </div>
-            <div class="row align-items-center justify-content-between">
+            <div class="row align-items-center justify-content-between flex-column-reverse flex-md-row">
                 <div class="col-md-5">
                     <div class="media">
                         <div class="icon icon_1"><img src="img/sec_5/icon_1.svg" alt="icon_1"></div>
@@ -337,8 +337,14 @@
         <div class="container">
             <img alt="" class="abs_pic circle" src="img/abs_pic/circle.svg">
             <img alt="" class="abs_pic circle_orange" src="img/abs_pic/circle_orange.svg">
+            <img alt="" class="abs_pic circle_orange_2" src="img/abs_pic/circle_orange.svg">
+            <img alt="" class="abs_pic circle_orange_3" src="img/abs_pic/circle_orange.svg">
             <img alt="" class="abs_pic dubl_line_vertical" src="img/abs_pic/dubl_line.svg">
-            <img alt="" class="abs_pic arrow" src="img/sec_7/arrow.svg">
+            <img alt="" class="abs_pic dubl_line" src="img/abs_pic/dubl_line.svg">
+            <img alt="" class="abs_pic dubl_line_2" src="img/abs_pic/dubl_line.svg">
+            <img alt="" class="abs_pic dubl_line_down" src="img/abs_pic/dubl_line.svg">
+            <img alt="" class="abs_pic dubl_line_down_2" src="img/abs_pic/dubl_line.svg">
+            <img alt="" class="abs_pic arrow" src="img/abs_pic/arrow.svg">
             <div class="row">
                 <div class="col-12">
                     <div class="sec_title">
@@ -441,6 +447,7 @@
     <!-- sec_9 -->
     <section class="sec sec_9">
         <div class="container">
+            <img class="abs_pic abs_pic" src="img/sec_9/abs_pic.svg" alt="abs_pic">
             <div class="row">
                 <div class="col-12">
                     <div class="sec_title">
@@ -496,6 +503,7 @@
     <!-- sec_10 -->
     <section class="sec sec_10">
         <div class="container">
+            <img class="abs_pic" src="img/sec_10/abs_pic.svg" alt="abs_pic">
             <div class="row">
                 <div class="col-12">
                     <div class="sec_title">
