--- a/newland.html
+++ b/newland.html
@@ -259,21 +259,21 @@
             <img alt="" class="abs_pic dubl_stone_2" src="img/abs_pic/dubl_stone.svg">
             <h2 class="second_title text-center">Наши звезды</h2>
             <div class="row">
-                <div class="col-4">
+                <div class="col-md-4">
                     <div class="card_profile">
                         <div class="icon" style="background-image: url('img/sec_6/port_1.jpg');"></div>
                         <h3>Константин Лашкевич</h3>
                         <p>Эксперт по управлению. Автор методологии “Позитивный менеджмент“</p>
                     </div>
                 </div>
-                <div class="col-4">
+                <div class="col-md-4">
                     <div class="card_profile">
                         <div class="icon" style="background-image: url('img/sec_6/port_2.jpg');"></div>
                         <h3>Ицхак Пинтосевич</h3>
                         <p>Эксперт №1 в СНГ по мотивации и раскрытию потенциала</p>
                     </div>
                 </div>
-                <div class="col-4">
+                <div class="col-md-4">
                     <div class="card_profile">
                         <div class="icon" style="background-image: url('img/sec_6/port_3.jpg');"></div>
                         <h3>Айше Борсеитова</h3>
